--- a/Contacts.html
+++ b/Contacts.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <h1>Priyanuj Dehingia</h1>
-  <p>Phone: 6000807349</p>
-  <p>Email: priyanujdehingia1@gmail.com</p>
+  <p>Phone: 1234567890</p>
+  <p>Email: priyanujdehingia@fakemail.com</p>
   <p>Linkedin: <a href="https://linkedin.com/in/pdehingia">Click here for my linkedin Profile link</a></p>
   <form action="mailto:prizdevin@gmail.com" method="POST" enctype="text/plain">
     <label for="">Your Name</label>
